# EpicDiscord

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  accountmanager.cpp  accountmanager.h  accountmanager.ui  chatwidget.ui  cmake_install.cmake  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  discordclient.cpp  discordclient.h  linkwarning.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  tokendialog.cpp  tokendialog.h
DiscordClient_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
DiscordClient_autogen/include/: ui_mainwindow.h
